fix partial update
